# paperless-ngx-llamaindex

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/paperless_ngx_llamaindex/: __about__.py  __main__.py  testing_docs.py
src/paperless_ngx_llamaindex/cli/: __init__.py
tests/: __init__.py
